@@ -1318,6 +1318,7 @@ org.dspace.app.webui.jsptag.ItemTag.dcfield = DC Field
 org.dspace.app.webui.jsptag.ItemTag.value = Value
 org.dspace.app.webui.jsptag.ItemTag.lang = Language
 org.dspace.app.webui.jsptag.ItemTag.appears = Appears in Collections:
+org.dspace.app.webui.jsptag.ItemTag.submitted = Submitted to Collection:
 org.dspace.app.webui.jsptag.ItemTag.files = Files in This Item:
 org.dspace.app.webui.jsptag.ItemTag.description = Description
 org.dspace.app.webui.jsptag.ItemTag.files.no = There are no files associated with this item.
